manifests/deployment-item-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: item-service
  labels:
    app: item-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: item-service
  template:
    metadata:
      labels:
        app: item-service
    spec:
      containers:
        - name: item-service
          image: k3d-spaced:5000/item-service:debug
          ports:
            - containerPort: 50051
          resources:
            limits:
              memory: 512Mi
              cpu: '1'
